@@ -5,8 +5,26 @@
  */
 package org.camunda.optimize.service.alert;
 
+import static org.camunda.optimize.service.util.configuration.WebhookConfiguration.Placeholder.ALERT_CURRENT_VALUE;
+import static org.camunda.optimize.service.util.configuration.WebhookConfiguration.Placeholder.ALERT_MESSAGE;
+import static org.camunda.optimize.service.util.configuration.WebhookConfiguration.Placeholder.ALERT_NAME;
+import static org.camunda.optimize.test.optimize.UiConfigurationClient.TEST_CUSTOM_CONTENT_TYPE_WEBHOOK_NAME;
+import static org.camunda.optimize.test.optimize.UiConfigurationClient.TEST_INVALID_PORT_WEBHOOK_NAME;
+import static org.camunda.optimize.test.optimize.UiConfigurationClient.TEST_WEBHOOK_HOST;
+import static org.camunda.optimize.test.optimize.UiConfigurationClient.TEST_WEBHOOK_METHOD;
+import static org.camunda.optimize.test.optimize.UiConfigurationClient.TEST_WEBHOOK_NAME;
+import static org.camunda.optimize.test.optimize.UiConfigurationClient.TEST_WEBHOOK_URL_PATH;
+import static org.camunda.optimize.test.optimize.UiConfigurationClient.TEST_WEBHOOK_WITH_PROXY_NAME;
+import static org.camunda.optimize.test.optimize.UiConfigurationClient.createWebhookHostUrl;
+import static org.mockserver.model.HttpRequest.request;
+import static org.mockserver.model.JsonBody.json;
+
 import com.google.common.collect.ImmutableMap;
 import io.github.netmikey.logunit.api.LogCapturer;
+import jakarta.ws.rs.HttpMethod;
+import java.util.Map;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import org.camunda.optimize.AbstractAlertIT;
 import org.camunda.optimize.JettyConfig;
 import org.camunda.optimize.dto.optimize.ReportConstants;
@@ -27,25 +45,6 @@ import org.mockserver.junit.jupiter.MockServerSettings;
 import org.mockserver.matchers.MatchType;
 import org.mockserver.verify.VerificationTimes;
 
-import jakarta.ws.rs.HttpMethod;
-import java.util.Map;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
-import static org.camunda.optimize.service.util.configuration.WebhookConfiguration.Placeholder.ALERT_CURRENT_VALUE;
-import static org.camunda.optimize.service.util.configuration.WebhookConfiguration.Placeholder.ALERT_MESSAGE;
-import static org.camunda.optimize.service.util.configuration.WebhookConfiguration.Placeholder.ALERT_NAME;
-import static org.camunda.optimize.test.optimize.UiConfigurationClient.TEST_CUSTOM_CONTENT_TYPE_WEBHOOK_NAME;
-import static org.camunda.optimize.test.optimize.UiConfigurationClient.TEST_INVALID_PORT_WEBHOOK_NAME;
-import static org.camunda.optimize.test.optimize.UiConfigurationClient.TEST_WEBHOOK_HOST;
-import static org.camunda.optimize.test.optimize.UiConfigurationClient.TEST_WEBHOOK_METHOD;
-import static org.camunda.optimize.test.optimize.UiConfigurationClient.TEST_WEBHOOK_NAME;
-import static org.camunda.optimize.test.optimize.UiConfigurationClient.TEST_WEBHOOK_URL_PATH;
-import static org.camunda.optimize.test.optimize.UiConfigurationClient.TEST_WEBHOOK_WITH_PROXY_NAME;
-import static org.camunda.optimize.test.optimize.UiConfigurationClient.createWebhookHostUrl;
-import static org.mockserver.model.HttpRequest.request;
-import static org.mockserver.model.JsonBody.json;
-
 @ExtendWith(MockServerExtension.class)
 @MockServerSettings
 public class AlertWebhookIT extends AbstractAlertIT {
@@ -59,10 +58,11 @@ public class AlertWebhookIT extends AbstractAlertIT {
     setWebhookConfiguration(client.getPort());
 
     final ProcessInstanceEngineDto processInstance = deployWithTimeShift(0L, 2L);
-    final String collectionId = collectionClient.createNewCollectionWithProcessScope(processInstance);
-    final String reportId = createAndStoreDurationNumberReport(
-      collectionId, processInstance.getProcessDefinitionKey(), ReportConstants.ALL_VERSIONS
-    );
+    final String collectionId =
+        collectionClient.createNewCollectionWithProcessScope(processInstance);
+    final String reportId =
+        createAndStoreDurationNumberReport(
+            collectionId, processInstance.getProcessDefinitionKey(), ReportConstants.ALL_VERSIONS);
     final AlertCreationRequestDto simpleAlert = alertClient.createSimpleAlert(reportId);
     simpleAlert.setWebhook(TEST_WEBHOOK_NAME);
     simpleAlert.setFixNotification(true);
@@ -74,18 +74,18 @@ public class AlertWebhookIT extends AbstractAlertIT {
     triggerAndCompleteCheckJob(alertId);
 
     // then
-    final String expectedNewAlertPayload = createActiveAlertExpectedWebhookPayloadWithAllPlaceholders(
-      collectionId, reportId, simpleAlert, AlertNotificationType.NEW, "2000.0"
-    );
+    final String expectedNewAlertPayload =
+        createActiveAlertExpectedWebhookPayloadWithAllPlaceholders(
+            collectionId, reportId, simpleAlert, AlertNotificationType.NEW, "2000.0");
     verifyWebhookCallWithPayload(client, expectedNewAlertPayload);
 
     // when
     triggerAndCompleteReminderJob(alertId);
 
     // then
-    final String expectedReminderAlertPayload = createActiveAlertExpectedWebhookPayloadWithAllPlaceholders(
-      collectionId, reportId, simpleAlert, AlertNotificationType.REMINDER, "2000.0"
-    );
+    final String expectedReminderAlertPayload =
+        createActiveAlertExpectedWebhookPayloadWithAllPlaceholders(
+            collectionId, reportId, simpleAlert, AlertNotificationType.REMINDER, "2000.0");
     verifyWebhookCallWithPayload(client, expectedReminderAlertPayload);
 
     // when
@@ -93,9 +93,9 @@ public class AlertWebhookIT extends AbstractAlertIT {
     triggerAndCompleteReminderJob(alertId);
 
     // then
-    final String expectedResolvedAlertPayload = createResolvedAlertExpectedWebhookPayloadWithAllPlaceholders(
-      collectionId, reportId, simpleAlert, AlertNotificationType.RESOLVED, "1500.0"
-    );
+    final String expectedResolvedAlertPayload =
+        createResolvedAlertExpectedWebhookPayloadWithAllPlaceholders(
+            collectionId, reportId, simpleAlert, AlertNotificationType.RESOLVED, "1500.0");
     verifyWebhookCallWithPayload(client, expectedResolvedAlertPayload);
   }
 
@@ -108,10 +108,13 @@ public class AlertWebhookIT extends AbstractAlertIT {
       setWebhookConfiguration(client.getPort());
 
       final ProcessInstanceEngineDto processInstance = deployWithTimeShift(0L, 2L);
-      final String collectionId = collectionClient.createNewCollectionWithProcessScope(processInstance);
-      final String reportId = createAndStoreDurationNumberReport(
-        collectionId, processInstance.getProcessDefinitionKey(), ReportConstants.ALL_VERSIONS
-      );
+      final String collectionId =
+          collectionClient.createNewCollectionWithProcessScope(processInstance);
+      final String reportId =
+          createAndStoreDurationNumberReport(
+              collectionId,
+              processInstance.getProcessDefinitionKey(),
+              ReportConstants.ALL_VERSIONS);
       final AlertCreationRequestDto simpleAlert = alertClient.createSimpleAlert(reportId);
       simpleAlert.setWebhook(TEST_WEBHOOK_NAME);
       simpleAlert.setFixNotification(true);
@@ -123,9 +126,14 @@ public class AlertWebhookIT extends AbstractAlertIT {
       triggerAndCompleteCheckJob(alertId);
 
       // then
-      final String expectedNewAlertPayload = createActiveAlertExpectedWebhookPayloadWithAllPlaceholders(
-        collectionId, reportId, simpleAlert, AlertNotificationType.NEW, "2000.0", customContextPath
-      );
+      final String expectedNewAlertPayload =
+          createActiveAlertExpectedWebhookPayloadWithAllPlaceholders(
+              collectionId,
+              reportId,
+              simpleAlert,
+              AlertNotificationType.NEW,
+              "2000.0",
+              customContextPath);
       verifyWebhookCallWithPayload(client, expectedNewAlertPayload);
     } finally {
       embeddedOptimizeExtension.getConfigurationService().setContextPath(null);
@@ -136,16 +144,17 @@ public class AlertWebhookIT extends AbstractAlertIT {
   public void configureWebhookWithUnsupportedHttpGETMethod(MockServerClient client) {
     // given
     client.reset();
-    final Map<String, WebhookConfiguration> webhookConfigurationMap = Map.of(
-      TEST_WEBHOOK_NAME,
-      uiConfigurationClient.createWebhookConfiguration(
-        createWebhookHostUrl(7654) + TEST_WEBHOOK_URL_PATH,
-        ImmutableMap.of("Content-Type", "application/json"),
-        HttpMethod.GET,
-        "payload"
-      )
-    );
-    embeddedOptimizeExtension.getConfigurationService().setConfiguredWebhooks(webhookConfigurationMap);
+    final Map<String, WebhookConfiguration> webhookConfigurationMap =
+        Map.of(
+            TEST_WEBHOOK_NAME,
+            uiConfigurationClient.createWebhookConfiguration(
+                createWebhookHostUrl(7654) + TEST_WEBHOOK_URL_PATH,
+                ImmutableMap.of("Content-Type", "application/json"),
+                HttpMethod.GET,
+                "payload"));
+    embeddedOptimizeExtension
+        .getConfigurationService()
+        .setConfiguredWebhooks(webhookConfigurationMap);
     embeddedOptimizeExtension.reloadConfiguration();
     final String alertId = setupWebhookAlert(TEST_WEBHOOK_NAME);
 
@@ -154,23 +163,25 @@ public class AlertWebhookIT extends AbstractAlertIT {
 
     // then
     client.verifyZeroInteractions();
-    alertJobLogs.assertContains("Exception thrown while trying to send notification: webhook notification");
+    alertJobLogs.assertContains(
+        "Exception thrown while trying to send notification: webhook notification");
   }
 
   @Test
   public void configureWebhookWithUnsupportedHttpDELETEMethod(MockServerClient client) {
     // given
     client.reset();
-    final Map<String, WebhookConfiguration> webhookConfigurationMap = Map.of(
-      TEST_WEBHOOK_NAME,
-      uiConfigurationClient.createWebhookConfiguration(
-        createWebhookHostUrl(7654) + TEST_WEBHOOK_URL_PATH,
-        ImmutableMap.of("Content-Type", "application/json"),
-        HttpMethod.DELETE,
-        "payload"
-      )
-    );
-    embeddedOptimizeExtension.getConfigurationService().setConfiguredWebhooks(webhookConfigurationMap);
+    final Map<String, WebhookConfiguration> webhookConfigurationMap =
+        Map.of(
+            TEST_WEBHOOK_NAME,
+            uiConfigurationClient.createWebhookConfiguration(
+                createWebhookHostUrl(7654) + TEST_WEBHOOK_URL_PATH,
+                ImmutableMap.of("Content-Type", "application/json"),
+                HttpMethod.DELETE,
+                "payload"));
+    embeddedOptimizeExtension
+        .getConfigurationService()
+        .setConfiguredWebhooks(webhookConfigurationMap);
     embeddedOptimizeExtension.reloadConfiguration();
     final String alertId = setupWebhookAlert(TEST_WEBHOOK_NAME);
 
@@ -179,18 +190,24 @@ public class AlertWebhookIT extends AbstractAlertIT {
 
     // then
     client.verifyZeroInteractions();
-    alertJobLogs.assertContains("Exception thrown while trying to send notification: webhook notification");
+    alertJobLogs.assertContains(
+        "Exception thrown while trying to send notification: webhook notification");
   }
 
   @Test
   public void sendWebhookRequestWithSomePlaceholderBody(MockServerClient client) {
     // given
     client.reset();
-    final String payloadTemplate = "{\n" +
-      Stream.of(ALERT_NAME, ALERT_CURRENT_VALUE)
-        .map(placeholder -> String.format("\"%s\": \"%s\"", placeholder.name(), placeholder.getPlaceholderString()))
-        .collect(Collectors.joining(",\n"))
-      + "\n}";
+    final String payloadTemplate =
+        "{\n"
+            + Stream.of(ALERT_NAME, ALERT_CURRENT_VALUE)
+                .map(
+                    placeholder ->
+                        String.format(
+                            "\"%s\": \"%s\"",
+                            placeholder.name(), placeholder.getPlaceholderString()))
+                .collect(Collectors.joining(",\n"))
+            + "\n}";
     setWebhookConfiguration(client.getPort(), payloadTemplate);
 
     final String alertId = setupWebhookAlert(TEST_WEBHOOK_NAME);
@@ -199,35 +216,42 @@ public class AlertWebhookIT extends AbstractAlertIT {
     triggerAndCompleteCheckJob(alertId);
 
     // then
-    final String expectedAlertPayload = "{\n" +
-      String.format("\"%s\": \"%s\",\n", ALERT_NAME.name(), AlertClient.TEST_ALERT_NAME) +
-      String.format("\"%s\": \"%s\",\n", ALERT_CURRENT_VALUE.name(), "2000.0")
-      + "\n}";
+    final String expectedAlertPayload =
+        "{\n"
+            + String.format("\"%s\": \"%s\",\n", ALERT_NAME.name(), AlertClient.TEST_ALERT_NAME)
+            + String.format("\"%s\": \"%s\",\n", ALERT_CURRENT_VALUE.name(), "2000.0")
+            + "\n}";
     verifyWebhookCallWithPayload(client, expectedAlertPayload);
   }
 
   @Test
   public void sendWebhookRequestWithProxyConfigured(MockServerClient client) {
     // given
-    final String payloadTemplate = "{\n" +
-      Stream.of(ALERT_NAME, ALERT_CURRENT_VALUE)
-        .map(placeholder -> String.format("\"%s\": \"%s\"", placeholder.name(), placeholder.getPlaceholderString()))
-        .collect(Collectors.joining(",\n"))
-      + "\n}";
+    final String payloadTemplate =
+        "{\n"
+            + Stream.of(ALERT_NAME, ALERT_CURRENT_VALUE)
+                .map(
+                    placeholder ->
+                        String.format(
+                            "\"%s\": \"%s\"",
+                            placeholder.name(), placeholder.getPlaceholderString()))
+                .collect(Collectors.joining(",\n"))
+            + "\n}";
 
     final String webhookHost = "128.0.0.1:7654";
-    Map<String, WebhookConfiguration> webhookConfigurationMap = Map.of(
-      TEST_WEBHOOK_WITH_PROXY_NAME,
-      uiConfigurationClient.createWebhookConfiguration(
-        "http://" + webhookHost + TEST_WEBHOOK_URL_PATH,
-        ImmutableMap.of("Content-Type", "application/json"),
-        TEST_WEBHOOK_METHOD,
-        payloadTemplate,
-        // We use the Mock Server as the proxy to capture the request
-        new ProxyConfiguration(true, TEST_WEBHOOK_HOST, client.getPort(), false)
-      )
-    );
-    embeddedOptimizeExtension.getConfigurationService().setConfiguredWebhooks(webhookConfigurationMap);
+    Map<String, WebhookConfiguration> webhookConfigurationMap =
+        Map.of(
+            TEST_WEBHOOK_WITH_PROXY_NAME,
+            uiConfigurationClient.createWebhookConfiguration(
+                "http://" + webhookHost + TEST_WEBHOOK_URL_PATH,
+                ImmutableMap.of("Content-Type", "application/json"),
+                TEST_WEBHOOK_METHOD,
+                payloadTemplate,
+                // We use the Mock Server as the proxy to capture the request
+                new ProxyConfiguration(true, TEST_WEBHOOK_HOST, client.getPort(), false)));
+    embeddedOptimizeExtension
+        .getConfigurationService()
+        .setConfiguredWebhooks(webhookConfigurationMap);
     embeddedOptimizeExtension.reloadConfiguration();
 
     final String alertId = setupWebhookAlert(TEST_WEBHOOK_WITH_PROXY_NAME);
@@ -237,46 +261,50 @@ public class AlertWebhookIT extends AbstractAlertIT {
 
     // then
     client.verify(
-      request()
-        .withPath(TEST_WEBHOOK_URL_PATH)
-        .withMethod(TEST_WEBHOOK_METHOD)
-        .withHeader("Host", webhookHost)
-        .withHeader("Proxy-Connection", "Keep-Alive")
-        .withKeepAlive(true)
-        .withSecure(false),
-      VerificationTimes.once()
-    );
+        request()
+            .withPath(TEST_WEBHOOK_URL_PATH)
+            .withMethod(TEST_WEBHOOK_METHOD)
+            .withHeader("Host", webhookHost)
+            .withHeader("Proxy-Connection", "Keep-Alive")
+            .withKeepAlive(true)
+            .withSecure(false),
+        VerificationTimes.once());
   }
 
   @Test
   public void sendMultipleWebhookRequestWithProxyConfiguredForOneWebhook(MockServerClient client) {
     // given
-    final String payloadTemplate = "{\n" +
-      Stream.of(ALERT_NAME, ALERT_CURRENT_VALUE)
-        .map(placeholder -> String.format("\"%s\": \"%s\"", placeholder.name(), placeholder.getPlaceholderString()))
-        .collect(Collectors.joining(",\n"))
-      + "\n}";
+    final String payloadTemplate =
+        "{\n"
+            + Stream.of(ALERT_NAME, ALERT_CURRENT_VALUE)
+                .map(
+                    placeholder ->
+                        String.format(
+                            "\"%s\": \"%s\"",
+                            placeholder.name(), placeholder.getPlaceholderString()))
+                .collect(Collectors.joining(",\n"))
+            + "\n}";
 
     final String proxyWebhookHost = "128.0.0.1:7654";
-    Map<String, WebhookConfiguration> webhookConfigurationMap = Map.of(
-      TEST_WEBHOOK_WITH_PROXY_NAME,
-      uiConfigurationClient.createWebhookConfiguration(
-        "http://" + proxyWebhookHost + TEST_WEBHOOK_URL_PATH,
-        ImmutableMap.of("Content-Type", "application/json"),
-        TEST_WEBHOOK_METHOD,
-        payloadTemplate,
-        // We use the Mock Server as the proxy to capture the request
-        new ProxyConfiguration(true, TEST_WEBHOOK_HOST, client.getPort(), false)
-      ),
-      TEST_WEBHOOK_NAME,
-      uiConfigurationClient.createWebhookConfiguration(
-        createWebhookHostUrl(client.getPort()) + TEST_WEBHOOK_URL_PATH,
-        ImmutableMap.of("Content-Type", "application/json"),
-        TEST_WEBHOOK_METHOD,
-        payloadTemplate
-      )
-    );
-    embeddedOptimizeExtension.getConfigurationService().setConfiguredWebhooks(webhookConfigurationMap);
+    Map<String, WebhookConfiguration> webhookConfigurationMap =
+        Map.of(
+            TEST_WEBHOOK_WITH_PROXY_NAME,
+            uiConfigurationClient.createWebhookConfiguration(
+                "http://" + proxyWebhookHost + TEST_WEBHOOK_URL_PATH,
+                ImmutableMap.of("Content-Type", "application/json"),
+                TEST_WEBHOOK_METHOD,
+                payloadTemplate,
+                // We use the Mock Server as the proxy to capture the request
+                new ProxyConfiguration(true, TEST_WEBHOOK_HOST, client.getPort(), false)),
+            TEST_WEBHOOK_NAME,
+            uiConfigurationClient.createWebhookConfiguration(
+                createWebhookHostUrl(client.getPort()) + TEST_WEBHOOK_URL_PATH,
+                ImmutableMap.of("Content-Type", "application/json"),
+                TEST_WEBHOOK_METHOD,
+                payloadTemplate));
+    embeddedOptimizeExtension
+        .getConfigurationService()
+        .setConfiguredWebhooks(webhookConfigurationMap);
     embeddedOptimizeExtension.reloadConfiguration();
 
     final String proxyWebhookAlertId = setupWebhookAlert(TEST_WEBHOOK_WITH_PROXY_NAME);
@@ -288,21 +316,19 @@ public class AlertWebhookIT extends AbstractAlertIT {
 
     // then the proxy webhook notification request is sent
     client.verify(
-      request()
-        .withPath(TEST_WEBHOOK_URL_PATH)
-        .withMethod(TEST_WEBHOOK_METHOD)
-        .withHeader("Host", proxyWebhookHost)
-        .withHeader("Proxy-Connection", "Keep-Alive")
-        .withKeepAlive(true)
-        .withSecure(false)
-    );
+        request()
+            .withPath(TEST_WEBHOOK_URL_PATH)
+            .withMethod(TEST_WEBHOOK_METHOD)
+            .withHeader("Host", proxyWebhookHost)
+            .withHeader("Proxy-Connection", "Keep-Alive")
+            .withKeepAlive(true)
+            .withSecure(false));
     // and so is the non-proxied request
     client.verify(
-      request()
-        .withPath(TEST_WEBHOOK_URL_PATH)
-        .withMethod(TEST_WEBHOOK_METHOD)
-        .withHeader("Host", TEST_WEBHOOK_HOST + ":" + client.getPort())
-    );
+        request()
+            .withPath(TEST_WEBHOOK_URL_PATH)
+            .withMethod(TEST_WEBHOOK_METHOD)
+            .withHeader("Host", TEST_WEBHOOK_HOST + ":" + client.getPort()));
   }
 
   @Test
@@ -363,8 +389,9 @@ public class AlertWebhookIT extends AbstractAlertIT {
     client.reset();
     setWebhookConfiguration(client.getPort());
     setEmailConfiguration();
-    embeddedOptimizeExtension.getConfigurationService()
-      .setNotificationEmailPort(9999); // set to incorrect port so that email notifications fail
+    embeddedOptimizeExtension
+        .getConfigurationService()
+        .setNotificationEmailPort(9999); // set to incorrect port so that email notifications fail
 
     String alertId = setupWebhookAlert(TEST_WEBHOOK_NAME);
 
@@ -385,91 +412,114 @@ public class AlertWebhookIT extends AbstractAlertIT {
     return alertClient.createAlert(simpleAlert);
   }
 
-  private void verifyWebhookCallWithPayload(final MockServerClient client, final String expectedNewAlertPayload) {
+  private void verifyWebhookCallWithPayload(
+      final MockServerClient client, final String expectedNewAlertPayload) {
     client.verify(
-      request()
-        .withPath(TEST_WEBHOOK_URL_PATH)
-        .withMethod(TEST_WEBHOOK_METHOD)
-        .withBody(json(expectedNewAlertPayload, MatchType.STRICT)),
-      VerificationTimes.once()
-    );
+        request()
+            .withPath(TEST_WEBHOOK_URL_PATH)
+            .withMethod(TEST_WEBHOOK_METHOD)
+            .withBody(json(expectedNewAlertPayload, MatchType.STRICT)),
+        VerificationTimes.once());
   }
 
-  private String createActiveAlertExpectedWebhookPayloadWithAllPlaceholders(final String collectionId,
-                                                                            final String reportId,
-                                                                            final AlertCreationRequestDto simpleAlert,
-                                                                            final AlertNotificationType alertType,
-                                                                            final String currentValue) {
+  private String createActiveAlertExpectedWebhookPayloadWithAllPlaceholders(
+      final String collectionId,
+      final String reportId,
+      final AlertCreationRequestDto simpleAlert,
+      final AlertNotificationType alertType,
+      final String currentValue) {
     final String expectedLink = createReportLink(collectionId, reportId, alertType);
     final String expectedMessage = createAlertMessage(expectedLink);
     return createPayloadJson(simpleAlert, alertType, currentValue, expectedLink, expectedMessage);
   }
 
-  private String createActiveAlertExpectedWebhookPayloadWithAllPlaceholders(final String collectionId,
-                                                                            final String reportId,
-                                                                            final AlertCreationRequestDto simpleAlert,
-                                                                            final AlertNotificationType alertType,
-                                                                            final String currentValue,
-                                                                            final String contextPath) {
+  private String createActiveAlertExpectedWebhookPayloadWithAllPlaceholders(
+      final String collectionId,
+      final String reportId,
+      final AlertCreationRequestDto simpleAlert,
+      final AlertNotificationType alertType,
+      final String currentValue,
+      final String contextPath) {
     final String expectedLink = createReportLink(collectionId, reportId, alertType, contextPath);
     final String expectedMessage = createAlertMessage(expectedLink);
     return createPayloadJson(simpleAlert, alertType, currentValue, expectedLink, expectedMessage);
   }
 
-  private String createResolvedAlertExpectedWebhookPayloadWithAllPlaceholders(final String collectionId,
-                                                                              final String reportId,
-                                                                              final AlertCreationRequestDto simpleAlert,
-                                                                              final AlertNotificationType alertType,
-                                                                              final String currentValue) {
+  private String createResolvedAlertExpectedWebhookPayloadWithAllPlaceholders(
+      final String collectionId,
+      final String reportId,
+      final AlertCreationRequestDto simpleAlert,
+      final AlertNotificationType alertType,
+      final String currentValue) {
     final String expectedLink = createReportLink(collectionId, reportId, alertType);
     final String expectedMessage = createAlertResolvedMessage(expectedLink);
     return createPayloadJson(simpleAlert, alertType, currentValue, expectedLink, expectedMessage);
   }
 
-  private String createPayloadJson(final AlertCreationRequestDto simpleAlert, final AlertNotificationType alertType,
-                                   final String currentValue, final String expectedLink, final String expectedMessage) {
-    return "{\n" +
-      createJsonPropertyLine(ALERT_MESSAGE, expectedMessage) + ",\n" +
-      createJsonPropertyLine(Placeholder.ALERT_NAME, simpleAlert.getName()) + ",\n" +
-      createJsonPropertyLine(Placeholder.ALERT_REPORT_LINK, expectedLink) + ",\n" +
-      createJsonPropertyLine(ALERT_CURRENT_VALUE, currentValue) + ",\n" +
-      createJsonPropertyLine(Placeholder.ALERT_THRESHOLD_VALUE, "1500.0") + ",\n" +
-      createJsonPropertyLine(Placeholder.ALERT_THRESHOLD_OPERATOR, ">") + ",\n" +
-      createJsonPropertyLine(Placeholder.ALERT_TYPE, alertType.getId()) + ",\n" +
-      createJsonPropertyLine(Placeholder.ALERT_INTERVAL, "5") + ",\n" +
-      createJsonPropertyLine(Placeholder.ALERT_INTERVAL_UNIT, "seconds") +
-      "\n}";
+  private String createPayloadJson(
+      final AlertCreationRequestDto simpleAlert,
+      final AlertNotificationType alertType,
+      final String currentValue,
+      final String expectedLink,
+      final String expectedMessage) {
+    return "{\n"
+        + createJsonPropertyLine(ALERT_MESSAGE, expectedMessage)
+        + ",\n"
+        + createJsonPropertyLine(Placeholder.ALERT_NAME, simpleAlert.getName())
+        + ",\n"
+        + createJsonPropertyLine(Placeholder.ALERT_REPORT_LINK, expectedLink)
+        + ",\n"
+        + createJsonPropertyLine(ALERT_CURRENT_VALUE, currentValue)
+        + ",\n"
+        + createJsonPropertyLine(Placeholder.ALERT_THRESHOLD_VALUE, "1500.0")
+        + ",\n"
+        + createJsonPropertyLine(Placeholder.ALERT_THRESHOLD_OPERATOR, ">")
+        + ",\n"
+        + createJsonPropertyLine(Placeholder.ALERT_TYPE, alertType.getId())
+        + ",\n"
+        + createJsonPropertyLine(Placeholder.ALERT_INTERVAL, "5")
+        + ",\n"
+        + createJsonPropertyLine(Placeholder.ALERT_INTERVAL_UNIT, "seconds")
+        + "\n}";
   }
 
-  private String createReportLink(final String collectionId, final String reportId, final AlertNotificationType type) {
+  private String createReportLink(
+      final String collectionId, final String reportId, final AlertNotificationType type) {
     return createReportLink(collectionId, reportId, type, "");
   }
 
-  private String createReportLink(final String collectionId, final String reportId, final AlertNotificationType type,
-                                  final String contextPath) {
+  private String createReportLink(
+      final String collectionId,
+      final String reportId,
+      final AlertNotificationType type,
+      final String contextPath) {
     return String.format(
-      "http://localhost:%d%s/#/collection/%s/report/%s?utm_source=" + type.getUtmSource() + "&utm_medium=webhook",
-      embeddedOptimizeExtension.getBean(JettyConfig.class).getPort(EnvironmentPropertiesConstants.HTTP_PORT_KEY),
-      contextPath,
-      collectionId,
-      reportId
-    );
+        "http://localhost:%d%s/#/collection/%s/report/%s?utm_source="
+            + type.getUtmSource()
+            + "&utm_medium=webhook",
+        embeddedOptimizeExtension
+            .getBean(JettyConfig.class)
+            .getPort(EnvironmentPropertiesConstants.HTTP_PORT_KEY),
+        contextPath,
+        collectionId,
+        reportId);
   }
 
   private String createAlertMessage(final String expectedLink) {
-    return "Camunda Optimize - Report Status\\nAlert name:" +
-      " test alert\\nReport name: something\\nStatus: Given threshold [1s 500ms] was exceeded. Current" +
-      " value: 2s. Please check your Optimize report for more information! \\n" + expectedLink;
+    return "Camunda Optimize - Report Status\\nAlert name:"
+        + " test alert\\nReport name: something\\nStatus: Given threshold [1s 500ms] was exceeded. Current"
+        + " value: 2s. Please check your Optimize report for more information! \\n"
+        + expectedLink;
   }
 
   private String createAlertResolvedMessage(final String expectedLink) {
-    return "Camunda Optimize - Report Status\\nAlert name: test alert\\nReport name: something\\nStatus: Given " +
-      "threshold [1s 500ms] is not exceeded anymore. Current value: 1s 500ms. Please check your" +
-      " Optimize report for more information! \\n" + expectedLink;
+    return "Camunda Optimize - Report Status\\nAlert name: test alert\\nReport name: something\\nStatus: Given "
+        + "threshold [1s 500ms] is not exceeded anymore. Current value: 1s 500ms. Please check your"
+        + " Optimize report for more information! \\n"
+        + expectedLink;
   }
 
   private String createJsonPropertyLine(final Placeholder alertName, final String name) {
     return String.format("\"%s\": \"%s\"", alertName, name);
   }
-
 }
