@@ -5,9 +5,28 @@
  */
 package org.camunda.optimize.test.it.extension.db;
 
+import static org.camunda.optimize.service.db.DatabaseConstants.EVENT_PROCESS_DEFINITION_INDEX_NAME;
+import static org.camunda.optimize.service.db.DatabaseConstants.EXTERNAL_EVENTS_INDEX_SUFFIX;
+import static org.camunda.optimize.service.db.DatabaseConstants.PROCESS_INSTANCE_MULTI_ALIAS;
+import static org.camunda.optimize.service.db.DatabaseConstants.TIMESTAMP_BASED_IMPORT_INDEX_NAME;
+import static org.camunda.optimize.service.db.DatabaseConstants.ZEEBE_PROCESS_INSTANCE_INDEX_NAME;
+import static org.camunda.optimize.service.util.InstanceIndexUtil.getProcessInstanceIndexAliasName;
+import static org.camunda.optimize.test.util.DurationAggregationUtil.calculateExpectedValueGivenDurationsWithPercentileInterpolation;
+
 import com.google.common.collect.Iterables;
 import io.camunda.zeebe.protocol.record.value.BpmnElementType;
 import jakarta.ws.rs.NotSupportedException;
+import java.io.IOException;
+import java.time.OffsetDateTime;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
+import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 import org.camunda.optimize.dto.optimize.IdentityDto;
@@ -25,7 +44,9 @@ import org.camunda.optimize.service.db.es.OptimizeElasticsearchClient;
 import org.camunda.optimize.service.db.os.OptimizeOpenSearchClient;
 import org.camunda.optimize.service.db.os.externalcode.client.dsl.QueryDSL;
 import org.camunda.optimize.service.db.os.externalcode.client.dsl.RequestDSL;
+import org.camunda.optimize.service.db.os.schema.OpenSearchIndexSettingsBuilder;
 import org.camunda.optimize.service.db.os.schema.index.ExternalProcessVariableIndexOS;
+import org.camunda.optimize.service.db.os.schema.index.ProcessInstanceIndexOS;
 import org.camunda.optimize.service.db.os.schema.index.TerminatedUserSessionIndexOS;
 import org.camunda.optimize.service.db.os.schema.index.VariableUpdateInstanceIndexOS;
 import org.camunda.optimize.service.db.os.schema.index.events.EventIndexOS;
@@ -65,28 +86,9 @@ import org.opensearch.client.opensearch.core.search.TrackHits;
 import org.opensearch.client.opensearch.indices.ExistsRequest;
 import org.opensearch.client.opensearch.indices.GetIndexResponse;
 import org.opensearch.client.opensearch.indices.IndexSettings;
+import org.opensearch.client.opensearch.indices.PutIndicesSettingsRequest;
 import org.opensearch.client.opensearch.indices.RefreshRequest;
 import org.testcontainers.shaded.org.apache.commons.lang3.NotImplementedException;
-
-import java.io.IOException;
-import java.time.OffsetDateTime;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.Set;
-import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
-
-import static org.camunda.optimize.service.db.DatabaseConstants.EVENT_PROCESS_DEFINITION_INDEX_NAME;
-import static org.camunda.optimize.service.db.DatabaseConstants.EXTERNAL_EVENTS_INDEX_SUFFIX;
-import static org.camunda.optimize.service.db.DatabaseConstants.PROCESS_INSTANCE_MULTI_ALIAS;
-import static org.camunda.optimize.service.db.DatabaseConstants.TIMESTAMP_BASED_IMPORT_INDEX_NAME;
-import static org.camunda.optimize.service.db.DatabaseConstants.ZEEBE_PROCESS_INSTANCE_INDEX_NAME;
-import static org.camunda.optimize.service.util.InstanceIndexUtil.getProcessInstanceIndexAliasName;
-import static org.camunda.optimize.test.util.DurationAggregationUtil.calculateExpectedValueGivenDurationsWithPercentileInterpolation;
 
 @Slf4j
 public class OpenSearchDatabaseTestService extends DatabaseTestService {
@@ -99,11 +101,25 @@ public class OpenSearchDatabaseTestService extends DatabaseTestService {
 
   private OptimizeOpenSearchClient prefixAwareOptimizeOpenSearchClient;
 
-  public OpenSearchDatabaseTestService(final String customIndexPrefix,
-                                       final boolean haveToClean) {
+  public OpenSearchDatabaseTestService(final String customIndexPrefix, final boolean haveToClean) {
     super(customIndexPrefix, haveToClean);
     initOsClient();
     setTestIndexRepository(new TestIndexRepositoryOS(prefixAwareOptimizeOpenSearchClient));
+  }
+
+  private static ClientAndServer initMockServer() {
+    return DatabaseTestService.initMockServer(
+        IntegrationTestConfigurationUtil.createItConfigurationService()
+            .getOpenSearchConfiguration()
+            .getFirstConnectionNode());
+  }
+
+  @NotNull
+  private static IndexRequest.Builder createIndexRequestBuilder(
+      final String indexName, final String id, final Object entry) {
+    final IndexRequest.Builder request =
+        new IndexRequest.Builder().document(entry).index(indexName).id(id).refresh(Refresh.True);
+    return request;
   }
 
   @Override
@@ -128,7 +144,8 @@ public class OpenSearchDatabaseTestService extends DatabaseTestService {
 
   @Override
   public void afterEach() {
-    // If the MockServer has been used, we reset all expectations and logs and revert to the default client
+    // If the MockServer has been used, we reset all expectations and logs and revert to the default
+    // client
     if (prefixAwareOptimizeOpenSearchClient == CLIENT_CACHE.get(MOCKSERVER_CLIENT_KEY)) {
       log.info("Resetting all MockServer expectations and logs");
       mockServerClient.reset();
@@ -145,7 +162,7 @@ public class OpenSearchDatabaseTestService extends DatabaseTestService {
     } else {
       final ConfigurationService configurationService = createConfigurationService();
       final DatabaseConnectionNodeConfiguration osConfig =
-        configurationService.getOpenSearchConfiguration().getFirstConnectionNode();
+          configurationService.getOpenSearchConfiguration().getFirstConnectionNode();
       osConfig.setHost(MockServerUtil.MOCKSERVER_HOST);
       osConfig.setHttpPort(mockServerClient.getLocalPort());
       createClientAndAddToCache(MOCKSERVER_CLIENT_KEY, configurationService);
@@ -156,52 +173,50 @@ public class OpenSearchDatabaseTestService extends DatabaseTestService {
   @Override
   public void refreshAllOptimizeIndices() {
     try {
-      RefreshRequest refreshAllIndicesRequest =
-        new RefreshRequest.Builder()
-          .index(getIndexNameService().getIndexPrefix() + "*")
-          .build();
+      final RefreshRequest refreshAllIndicesRequest =
+          new RefreshRequest.Builder().index(getIndexNameService().getIndexPrefix() + "*").build();
 
-      getOptimizeOpenSearchClient().getOpenSearchClient()
-        .indices()
-        .refresh(refreshAllIndicesRequest);
-    } catch (Exception e) {
+      getOptimizeOpenSearchClient()
+          .getOpenSearchClient()
+          .indices()
+          .refresh(refreshAllIndicesRequest);
+    } catch (final Exception e) {
       throw new OptimizeIntegrationTestException("Could not refresh Optimize indices!", e);
     }
   }
 
   @Override
-  public void addEntryToDatabase(String indexName, String id, Object entry) {
+  public void addEntryToDatabase(final String indexName, final String id, final Object entry) {
     final IndexRequest.Builder request = createIndexRequestBuilder(indexName, id, entry);
-    final IndexResponse response = getOptimizeOpenSearchClient().getRichOpenSearchClient()
-      .doc()
-      .index(request);
+    final IndexResponse response =
+        getOptimizeOpenSearchClient().getRichOpenSearchClient().doc().index(request);
     if (!response.shards().failures().isEmpty()) {
-      final String reason = String.format("Could not add entry to index %s with id %s and entry %s", indexName, id, entry);
+      final String reason =
+          String.format(
+              "Could not add entry to index %s with id %s and entry %s", indexName, id, entry);
       throw new OptimizeIntegrationTestException(reason);
     }
   }
 
   @Override
-  public void addEntriesToDatabase(String indexName, Map<String, Object> idToEntryMap) {
+  public void addEntriesToDatabase(final String indexName, final Map<String, Object> idToEntryMap) {
     StreamSupport.stream(Iterables.partition(idToEntryMap.entrySet(), 10_000).spliterator(), false)
-      .forEach(batch -> {
-        final BulkRequest.Builder bulkRequestBuilder = new BulkRequest.Builder();
-        List<BulkOperation> operations = new ArrayList<>();
-        for (Map.Entry<String, Object> idAndObject : batch) {
-          IndexOperation.Builder<Object> operation =
-            new IndexOperation.Builder<>().document(idAndObject.getValue()).id(idAndObject.getKey());
-          operations.add(operation.build()._toBulkOperation());
-        }
-        bulkRequestBuilder.operations(operations)
-          .index(indexName);
-        prefixAwareOptimizeOpenSearchClient.doBulkRequest(
-          bulkRequestBuilder,
-          operations,
-          "add entries",
-          false
-        );
-      });
-
+        .forEach(
+            batch -> {
+              final List<BulkOperation> operations = new ArrayList<>();
+              for (final Map.Entry<String, Object> idAndObject : batch) {
+                final IndexOperation.Builder<Object> operation =
+                    new IndexOperation.Builder<>()
+                        .document(idAndObject.getValue())
+                        .id(idAndObject.getKey());
+                operations.add(operation.build()._toBulkOperation());
+              }
+              prefixAwareOptimizeOpenSearchClient.doBulkRequest(
+                  () -> new BulkRequest.Builder().operations(operations).index(indexName),
+                  operations,
+                  "add entries",
+                  false);
+            });
   }
 
   @Override
@@ -212,13 +227,12 @@ public class OpenSearchDatabaseTestService extends DatabaseTestService {
   @Override
   public Integer getDocumentCountOf(final String indexName) {
     try {
-      return Long.valueOf(getOptimizeOpenSearchClient()
-                            .count(new String[]{indexName}, QueryDSL.matchAll())).intValue();
-    } catch (IOException e) {
+      return Long.valueOf(
+              getOptimizeOpenSearchClient().count(new String[] {indexName}, QueryDSL.matchAll()))
+          .intValue();
+    } catch (final IOException e) {
       throw new OptimizeIntegrationTestException(
-        "Cannot evaluate document count for index " + indexName,
-        e
-      );
+          "Cannot evaluate document count for index " + indexName, e);
     }
   }
 
@@ -229,51 +243,51 @@ public class OpenSearchDatabaseTestService extends DatabaseTestService {
 
   @Override
   public Integer getCountOfCompletedInstancesWithIdsIn(final Set<Object> processInstanceIds) {
-    Set<String> stringProcessInstanceIds = processInstanceIds.stream()
-      .map(Object::toString)
-      .collect(Collectors.toSet());
+    final Set<String> stringProcessInstanceIds =
+        processInstanceIds.stream().map(Object::toString).collect(Collectors.toSet());
 
     return getInstanceCountWithQuery(
-      QueryDSL.and(
-        QueryDSL.exists(ProcessInstanceIndex.END_DATE),
-        QueryDSL.stringTerms(ProcessInstanceIndex.PROCESS_INSTANCE_ID, stringProcessInstanceIds)
-      )
-    );
+        QueryDSL.and(
+            QueryDSL.exists(ProcessInstanceIndex.END_DATE),
+            QueryDSL.stringTerms(
+                ProcessInstanceIndex.PROCESS_INSTANCE_ID, stringProcessInstanceIds)));
   }
 
   @Override
   public Integer getActivityCountForAllProcessInstances() {
     // TODO implement with #11121
-    throw new NotImplementedException("Not yet implemented for OpenSearch, will be implemented with issue #11121");
-//    SearchSourceBuilder searchSourceBuilder = new SearchSourceBuilder()
-//      .query(QueryDSL.matchAll())
-//      .fetchSource(false)
-//      .size(0)
-//      .aggregation(
-//        nested(FLOW_NODE_INSTANCES, FLOW_NODE_INSTANCES)
-//          .subAggregation(
-//            count(FLOW_NODE_INSTANCES + FREQUENCY_AGGREGATION)
-//              .field(FLOW_NODE_INSTANCES + "." + ProcessInstanceIndex.FLOW_NODE_INSTANCE_ID)
-//          )
-//      );
-//
-//    SearchRequest searchRequest = new SearchRequest()
-//      .indices(PROCESS_INSTANCE_MULTI_ALIAS)
-//      .source(searchSourceBuilder);
-//
-//    SearchResponse searchResponse;
-//    try {
-//      searchResponse = getOptimizeOpenClient().search(searchRequest);
-//    } catch (IOException | OpensearchStatusException e) {
-//      throw new OptimizeIntegrationTestException("Could not evaluate activity count in process instance indices.", e);
-//    }
-//
-//    Nested nested = searchResponse.getAggregations()
-//      .get(FLOW_NODE_INSTANCES);
-//    ValueCount countAggregator =
-//      nested.getAggregations()
-//        .get(FLOW_NODE_INSTANCES + FREQUENCY_AGGREGATION);
-//    return Long.valueOf(countAggregator.getValue()).intValue();
+    throw new NotImplementedException(
+        "Not yet implemented for OpenSearch, will be implemented with issue #11121");
+    //    SearchSourceBuilder searchSourceBuilder = new SearchSourceBuilder()
+    //      .query(QueryDSL.matchAll())
+    //      .fetchSource(false)
+    //      .size(0)
+    //      .aggregation(
+    //        nested(FLOW_NODE_INSTANCES, FLOW_NODE_INSTANCES)
+    //          .subAggregation(
+    //            count(FLOW_NODE_INSTANCES + FREQUENCY_AGGREGATION)
+    //              .field(FLOW_NODE_INSTANCES + "." + ProcessInstanceIndex.FLOW_NODE_INSTANCE_ID)
+    //          )
+    //      );
+    //
+    //    SearchRequest searchRequest = new SearchRequest()
+    //      .indices(PROCESS_INSTANCE_MULTI_ALIAS)
+    //      .source(searchSourceBuilder);
+    //
+    //    SearchResponse searchResponse;
+    //    try {
+    //      searchResponse = getOptimizeOpenClient().search(searchRequest);
+    //    } catch (IOException | OpensearchStatusException e) {
+    //      throw new OptimizeIntegrationTestException("Could not evaluate activity count in process
+    // instance indices.", e);
+    //    }
+    //
+    //    Nested nested = searchResponse.getAggregations()
+    //      .get(FLOW_NODE_INSTANCES);
+    //    ValueCount countAggregator =
+    //      nested.getAggregations()
+    //        .get(FLOW_NODE_INSTANCES + FREQUENCY_AGGREGATION);
+    //    return Long.valueOf(countAggregator.getValue()).intValue();
   }
 
   @Override
@@ -283,30 +297,36 @@ public class OpenSearchDatabaseTestService extends DatabaseTestService {
 
   @Override
   public Integer getVariableInstanceCountForAllCompletedProcessInstances() {
-    return getVariableInstanceCountForAllProcessInstances(QueryDSL.exists(ProcessInstanceIndex.END_DATE));
+    return getVariableInstanceCountForAllProcessInstances(
+        QueryDSL.exists(ProcessInstanceIndex.END_DATE));
   }
 
   @Override
   public void deleteAllOptimizeData() {
     getOptimizeOpenSearchClient()
-      .getRichOpenSearchClient().doc()
-      .deleteByQuery(QueryDSL.matchAll(), true, getIndexNameService().getIndexPrefix() + "*");
+        .getRichOpenSearchClient()
+        .doc()
+        .deleteByQuery(QueryDSL.matchAll(), true, getIndexNameService().getIndexPrefix() + "*");
   }
 
   @SneakyThrows
   @Override
   public void deleteAllIndicesContainingTerm(final String indexTerm) {
-    getOptimizeOpenSearchClient().getRichOpenSearchClient().index().deleteIndicesWithRetries(indexTerm + "*");
+    getOptimizeOpenSearchClient()
+        .getRichOpenSearchClient()
+        .index()
+        .deleteIndicesWithRetries(indexTerm + "*");
   }
 
   @Override
   public void deleteAllSingleProcessReports() {
     getOptimizeOpenSearchClient()
-      .getRichOpenSearchClient().doc()
-      .deleteByQuery(
-        QueryDSL.matchAll(), true,
-        getIndexNameService().getOptimizeIndexAliasForIndex(new SingleProcessReportIndexOS())
-      );
+        .getRichOpenSearchClient()
+        .doc()
+        .deleteByQuery(
+            QueryDSL.matchAll(),
+            true,
+            getIndexNameService().getOptimizeIndexAliasForIndex(new SingleProcessReportIndexOS()));
   }
 
   @Override
@@ -321,23 +341,32 @@ public class OpenSearchDatabaseTestService extends DatabaseTestService {
 
   @Override
   public void deleteAllVariableUpdateInstanceIndices() {
-    final String[] indexNames = getOptimizeOpenSearchClient().getAllIndicesForAlias(
-      getIndexNameService().getOptimizeIndexAliasForIndex(new VariableUpdateInstanceIndexOS())).toArray(String[]::new);
+    final String[] indexNames =
+        getOptimizeOpenSearchClient()
+            .getAllIndicesForAlias(
+                getIndexNameService()
+                    .getOptimizeIndexAliasForIndex(new VariableUpdateInstanceIndexOS()))
+            .toArray(String[]::new);
     deleteIndices(indexNames);
   }
 
   @Override
   public void deleteAllExternalVariableIndices() {
-    final String[] indexNames = getOptimizeOpenSearchClient().getAllIndicesForAlias(
-      getIndexNameService().getOptimizeIndexAliasForIndex(new ExternalProcessVariableIndexOS())).toArray(String[]::new);
+    final String[] indexNames =
+        getOptimizeOpenSearchClient()
+            .getAllIndicesForAlias(
+                getIndexNameService()
+                    .getOptimizeIndexAliasForIndex(new ExternalProcessVariableIndexOS()))
+            .toArray(String[]::new);
     deleteIndices(indexNames);
   }
 
   @Override
   public boolean indexExists(final String indexOrAliasName) {
     return getOptimizeOpenSearchClient()
-      .getRichOpenSearchClient().index()
-      .indexExists(indexOrAliasName);
+        .getRichOpenSearchClient()
+        .index()
+        .indexExists(indexOrAliasName);
   }
 
   @Override
@@ -345,64 +374,57 @@ public class OpenSearchDatabaseTestService extends DatabaseTestService {
   public boolean zeebeIndexExists(final String indexName) {
     // Cannot use the rich client here because we need an unprefixed index name
     return getOptimizeOpenSearchClient()
-      .getOpenSearchClient()
-      .indices()
-      .exists(new ExistsRequest.Builder().index(indexName).build())
-      .value();
+        .getOpenSearchClient()
+        .indices()
+        .exists(new ExistsRequest.Builder().index(indexName).build())
+        .value();
   }
 
   @SneakyThrows
   @Override
-  public OffsetDateTime getLastImportTimestampOfTimestampBasedImportIndex(final String dbType, final String engine) {
-    Optional<TimestampBasedImportIndexDto> response = prefixAwareOptimizeOpenSearchClient.getRichOpenSearchClient()
-      .doc()
-      .getWithRetries(
-        TIMESTAMP_BASED_IMPORT_INDEX_NAME,
-        DatabaseHelper.constructKey(dbType, engine),
-        TimestampBasedImportIndexDto.class
-      );
+  public OffsetDateTime getLastImportTimestampOfTimestampBasedImportIndex(
+      final String dbType, final String engine) {
+    final Optional<TimestampBasedImportIndexDto> response =
+        prefixAwareOptimizeOpenSearchClient
+            .getRichOpenSearchClient()
+            .doc()
+            .getWithRetries(
+                TIMESTAMP_BASED_IMPORT_INDEX_NAME,
+                DatabaseHelper.constructKey(dbType, engine),
+                TimestampBasedImportIndexDto.class);
 
-    return response.map(TimestampBasedImportIndexDto::getTimestampOfLastEntity)
-      .orElseThrow(() -> new OptimizeIntegrationTestException(String.format(
-        "Timestamp based import index does not exist: dbType: {%s}, engine: {%s}",
-        dbType,
-        engine
-      )));
+    return response
+        .map(TimestampBasedImportIndexDto::getTimestampOfLastEntity)
+        .orElseThrow(
+            () ->
+                new OptimizeIntegrationTestException(
+                    String.format(
+                        "Timestamp based import index does not exist: dbType: {%s}, engine: {%s}",
+                        dbType, engine)));
   }
 
   @Override
   public void deleteAllExternalEventIndices() {
-    final String eventIndexAlias = getIndexNameService().getOptimizeIndexAliasForIndex(new EventIndexOS());
-    final String[] eventIndices = getOptimizeOpenSearchClient().getAllIndicesForAlias(eventIndexAlias).toArray(String[]::new);
+    final String eventIndexAlias =
+        getIndexNameService().getOptimizeIndexAliasForIndex(new EventIndexOS());
+    final String[] eventIndices =
+        getOptimizeOpenSearchClient().getAllIndicesForAlias(eventIndexAlias).toArray(String[]::new);
     deleteIndices(eventIndices);
   }
 
   @SneakyThrows
   @Override
   public void deleteAllZeebeRecordsForPrefix(final String zeebeRecordPrefix) {
-    final GetIndexResponse allIndices = getOptimizeOpenSearchClient().getRichOpenSearchClient()
-      .index()
-      .get(RequestDSL.getIndexRequestBuilder("*").ignoreUnavailable(true));
+    final GetIndexResponse allIndices =
+        getOptimizeOpenSearchClient()
+            .getRichOpenSearchClient()
+            .index()
+            .get(RequestDSL.getIndexRequestBuilder("*").ignoreUnavailable(true));
 
-    final String[] indicesToDelete = allIndices.result().keySet().stream()
-      .filter(indexName -> indexName.contains(zeebeRecordPrefix))
-      .toArray(String[]::new);
-
-    if (indicesToDelete.length > 1) {
-      deleteIndices(indicesToDelete);
-    }
-  }
-
-  @SneakyThrows
-  @Override
-  public void deleteAllOtherZeebeRecordsWithPrefix(final String zeebeRecordPrefix, final String recordsToKeep) {
-    final GetIndexResponse allIndices = getOptimizeOpenSearchClient().getRichOpenSearchClient()
-      .index()
-      .get(RequestDSL.getIndexRequestBuilder("*").ignoreUnavailable(true));
-
-    final String[] indicesToDelete = allIndices.result().keySet().stream()
-      .filter(indexName -> indexName.contains(zeebeRecordPrefix) && !indexName.contains(recordsToKeep))
-      .toArray(String[]::new);
+    final String[] indicesToDelete =
+        allIndices.result().keySet().stream()
+            .filter(indexName -> indexName.contains(zeebeRecordPrefix))
+            .toArray(String[]::new);
 
     if (indicesToDelete.length > 1) {
       deleteIndices(indicesToDelete);
@@ -411,79 +433,111 @@ public class OpenSearchDatabaseTestService extends DatabaseTestService {
 
   @SneakyThrows
   @Override
-  public void updateZeebeRecordsForPrefix(final String zeebeRecordPrefix, final String indexName,
-                                          final String updateScript) {
+  public void deleteAllOtherZeebeRecordsWithPrefix(
+      final String zeebeRecordPrefix, final String recordsToKeep) {
+    // Since we are retrieving zeebe records, we cannot use the rich opensearch client,
+    // because it will add optimize prefixes to the request
+    final GetIndexResponse allIndices =
+        getOptimizeOpenSearchClient()
+            .getOpenSearchClient()
+            .indices()
+            .get(RequestDSL.getIndexRequestBuilder("*").ignoreUnavailable(true).build());
+
+    final String[] indicesToDelete =
+        allIndices.result().keySet().stream()
+            .filter(
+                indexName ->
+                    indexName.contains(zeebeRecordPrefix) && !indexName.contains(recordsToKeep))
+            .toArray(String[]::new);
+
+    if (indicesToDelete.length > 1) {
+      deleteIndices(indicesToDelete);
+    }
+  }
+
+  @SneakyThrows
+  @Override
+  public void updateZeebeRecordsForPrefix(
+      final String zeebeRecordPrefix, final String indexName, final String updateScript) {
     updateZeebeRecordsByQuery(zeebeRecordPrefix, indexName, QueryDSL.matchAll(), updateScript);
   }
 
   @SneakyThrows
   @Override
-  public void updateZeebeRecordsWithPositionForPrefix(final String zeebeRecordPrefix, final String indexName,
-                                                      final long position, final String updateScript) {
+  public void updateZeebeRecordsWithPositionForPrefix(
+      final String zeebeRecordPrefix,
+      final String indexName,
+      final long position,
+      final String updateScript) {
     updateZeebeRecordsByQuery(
-      zeebeRecordPrefix,
-      indexName,
-      QueryDSL.term(ZeebeRecordDto.Fields.position, position),
-      updateScript
-    );
+        zeebeRecordPrefix,
+        indexName,
+        QueryDSL.term(ZeebeRecordDto.Fields.position, position),
+        updateScript);
   }
 
   @SneakyThrows
   @Override
-  public void updateZeebeRecordsOfBpmnElementTypeForPrefix(final String zeebeRecordPrefix,
-                                                           final BpmnElementType bpmnElementType,
-                                                           final String updateScript) {
+  public void updateZeebeRecordsOfBpmnElementTypeForPrefix(
+      final String zeebeRecordPrefix,
+      final BpmnElementType bpmnElementType,
+      final String updateScript) {
     updateZeebeRecordsByQuery(
-      zeebeRecordPrefix,
-      ZEEBE_PROCESS_INSTANCE_INDEX_NAME,
-      QueryDSL.term(
-        ZeebeRecordDto.Fields.value + "." + ZeebeProcessInstanceDataDto.Fields.bpmnElementType,
-        bpmnElementType.name()
-      ),
-      updateScript
-    );
+        zeebeRecordPrefix,
+        ZEEBE_PROCESS_INSTANCE_INDEX_NAME,
+        QueryDSL.term(
+            ZeebeRecordDto.Fields.value + "." + ZeebeProcessInstanceDataDto.Fields.bpmnElementType,
+            bpmnElementType.name()),
+        updateScript);
   }
 
   @SneakyThrows
   @Override
-  public void updateUserTaskDurations(final String processInstanceId,
-                                      final String processDefinitionKey,
-                                      final long duration) {
+  public void updateUserTaskDurations(
+      final String processInstanceId, final String processDefinitionKey, final long duration) {
     final String updateScript = buildUpdateScript(duration);
     updateRecordsByQuery(
-      getProcessInstanceIndexAliasName(processDefinitionKey),
-      QueryDSL.ids(processInstanceId),
-      updateScript
-    );
+        getProcessInstanceIndexAliasName(processDefinitionKey),
+        QueryDSL.ids(processInstanceId),
+        updateScript);
   }
 
   @Override
-  public Map<AggregationDto, Double> calculateExpectedValueGivenDurations(final Number... setDuration) {
+  public Map<AggregationDto, Double> calculateExpectedValueGivenDurations(
+      final Number... setDuration) {
     return calculateExpectedValueGivenDurationsWithPercentileInterpolation(setDuration);
   }
 
   @Override
   @SneakyThrows
-  public long countRecordsByQuery(final TermsQueryContainer queryContainer, final String expectedIndex) {
-    return getOptimizeOpenSearchClient().count(new String[]{expectedIndex}, queryContainer.toOpenSearchQuery());
+  public long countRecordsByQuery(
+      final TermsQueryContainer queryContainer, final String expectedIndex) {
+    return getOptimizeOpenSearchClient()
+        .count(new String[] {expectedIndex}, queryContainer.toOpenSearchQuery());
   }
 
   @Override
   @SneakyThrows
-  public <T> List<T> getZeebeExportedProcessableEvents(final String exportIndex, final TermsQueryContainer queryForProcessableEvents, final Class<T> zeebeRecordClass) {
-    BoolQuery query = queryForProcessableEvents.toOpenSearchQuery();
-    SearchRequest.Builder searchRequest = RequestDSL.searchRequestBuilder()
-      .index(exportIndex)
-      .query(query.toQuery())
-      .size(100);
+  public <T> List<T> getZeebeExportedRecordsByQuery(
+      final String exportIndex,
+      final TermsQueryContainer queryForZeebeRecords,
+      final Class<T> zeebeRecordClass) {
+    final BoolQuery query = queryForZeebeRecords.toOpenSearchQuery();
+    final SearchRequest.Builder searchRequest =
+        RequestDSL.searchRequestBuilder().index(exportIndex).query(query.toQuery()).size(100);
     return getOptimizeOpenSearchClient()
-      .getOpenSearchClient()
-      .search(searchRequest.build(), zeebeRecordClass)
-      .documents();
+        .getOpenSearchClient()
+        .search(searchRequest.build(), zeebeRecordClass)
+        .hits()
+        .hits()
+        .stream()
+        .map(Hit::source)
+        .toList();
   }
 
   @Override
-  public void updateEventProcessRoles(final String eventProcessId, final List<IdentityDto> identityDtos) {
+  public void updateEventProcessRoles(
+      final String eventProcessId, final List<IdentityDto> identityDtos) {
     // TODO #10087
     throw new NotImplementedException("Not yet implemented for OpenSearch");
   }
@@ -495,29 +549,34 @@ public class OpenSearchDatabaseTestService extends DatabaseTestService {
   }
 
   @Override
-  public Optional<EventProcessPublishStateDto> getEventProcessPublishStateDtoFromDatabase(final String processMappingId) {
+  public Optional<EventProcessPublishStateDto> getEventProcessPublishStateDtoFromDatabase(
+      final String processMappingId) {
     // TODO #10087
     throw new NotImplementedException("Not yet implemented for OpenSearch");
   }
 
   @Override
-  public Optional<EventProcessDefinitionDto> getEventProcessDefinitionFromDatabase(final String definitionId) {
+  public Optional<EventProcessDefinitionDto> getEventProcessDefinitionFromDatabase(
+      final String definitionId) {
     return Optional.ofNullable(
-      getOptimizeOpenSearchClient().get(
-        RequestDSL.getRequest(EVENT_PROCESS_DEFINITION_INDEX_NAME, definitionId),
-        EventProcessDefinitionDto.class,
-        "Could not retrieve entry from index " + EVENT_PROCESS_DEFINITION_INDEX_NAME + " with id " + definitionId)
-        .source()
-    );
+        getOptimizeOpenSearchClient()
+            .get(
+                RequestDSL.getRequest(EVENT_PROCESS_DEFINITION_INDEX_NAME, definitionId),
+                EventProcessDefinitionDto.class,
+                "Could not retrieve entry from index "
+                    + EVENT_PROCESS_DEFINITION_INDEX_NAME
+                    + " with id "
+                    + definitionId)
+            .source());
   }
 
   @Override
-  public List<EventProcessInstanceDto> getEventProcessInstancesFromDatabaseForProcessPublishStateId(final String publishStateId) {
+  public List<EventProcessInstanceDto> getEventProcessInstancesFromDatabaseForProcessPublishStateId(
+      final String publishStateId) {
     return getAllDocumentsOfIndicesAs(
-      new String[]{EventProcessInstanceIndex.constructIndexName(publishStateId)},
-      EventProcessInstanceDto.class,
-      QueryDSL.matchAll()
-    );
+        new String[] {EventProcessInstanceIndex.constructIndexName(publishStateId)},
+        EventProcessInstanceDto.class,
+        QueryDSL.matchAll());
   }
 
   @Override
@@ -536,46 +595,86 @@ public class OpenSearchDatabaseTestService extends DatabaseTestService {
   }
 
   @Override
-  protected <T extends OptimizeDto> List<T> getInstancesById(final String indexName,
-                                                             final List<String> instanceIds,
-                                                             final String idField,
-                                                             final Class<T> type) {
-    return getAllDocumentsOfIndicesAs(new String[]{indexName}, type, QueryDSL.stringTerms(idField, instanceIds));
+  protected <T extends OptimizeDto> List<T> getInstancesById(
+      final String indexName,
+      final List<String> instanceIds,
+      final String idField,
+      final Class<T> type) {
+    return getAllDocumentsOfIndicesAs(
+        new String[] {indexName}, type, QueryDSL.stringTerms(idField, instanceIds));
   }
 
   @Override
-  public <T> Optional<T> getDatabaseEntryById(final String indexName, final String entryId, final Class<T> type) {
+  public <T> Optional<T> getDatabaseEntryById(
+      final String indexName, final String entryId, final Class<T> type) {
     return Optional.ofNullable(
-      getOptimizeOpenSearchClient().get(
-        RequestDSL.getRequest(indexName, entryId),
-        type,
-        "Could not retrieve entry from index " + indexName + " with id " + entryId)
-        .source()
-    );
+        getOptimizeOpenSearchClient()
+            .get(
+                RequestDSL.getRequest(indexName, entryId),
+                type,
+                "Could not retrieve entry from index " + indexName + " with id " + entryId)
+            .source());
+  }
+
+  @Override
+  public int getNestedDocumentsLimit(final ConfigurationService configurationService) {
+    return configurationService.getOpenSearchConfiguration().getNestedDocumentsLimit();
+  }
+
+  @Override
+  public void setNestedDocumentsLimit(
+      final ConfigurationService configurationService, final int nestedDocumentsLimit) {
+    configurationService.getOpenSearchConfiguration().setNestedDocumentsLimit(nestedDocumentsLimit);
+  }
+
+  @Override
+  @SneakyThrows
+  public void updateProcessInstanceNestedDocLimit(
+      final String processDefinitionKey,
+      final int nestedDocLimit,
+      final ConfigurationService configurationService) {
+    setNestedDocumentsLimit(configurationService, nestedDocLimit);
+    final OptimizeOpenSearchClient osClient = getOptimizeOpenSearchClient();
+    final String indexName =
+        osClient
+            .getIndexNameService()
+            .getOptimizeIndexNameWithVersionForAllIndicesOf(
+                new ProcessInstanceIndexOS(processDefinitionKey));
+    osClient
+        .getRichOpenSearchClient()
+        .index()
+        .putSettings(
+            new PutIndicesSettingsRequest.Builder()
+                .settings(OpenSearchIndexSettingsBuilder.buildDynamicSettings(configurationService))
+                .index(indexName)
+                .build());
   }
 
   @SneakyThrows
   @Override
   public void deleteIndicesStartingWithPrefix(final String term) {
     final String[] indicesToDelete =
-      getOptimizeOpenSearchClient()
-        .getRichOpenSearchClient()
-        .index()
-        .getIndexNamesWithRetries(getIndexNameService().getIndexPrefix() + "-" + term + "*")
-        .toArray(String[]::new);
+        getOptimizeOpenSearchClient()
+            .getRichOpenSearchClient()
+            .index()
+            .getIndexNamesWithRetries(getIndexNameService().getIndexPrefix() + "-" + term + "*")
+            .toArray(String[]::new);
     if (indicesToDelete.length > 0) {
       deleteIndices(indicesToDelete);
     }
   }
 
+  @Override
   @SneakyThrows
   public String getDatabaseVersion() {
     if (opensearchDatabaseVersion == null) {
       opensearchDatabaseVersion =
-        OpenSearchClientBuilder.getCurrentOSVersion(getOptimizeOpenSearchClient().getOpenSearchClient());
+          OpenSearchClientBuilder.getCurrentOSVersion(
+              getOptimizeOpenSearchClient().getOpenSearchClient());
     }
     return opensearchDatabaseVersion;
   }
+
   private OptimizeOpenSearchClient getOptimizeOpenSearchClient() {
     return prefixAwareOptimizeOpenSearchClient;
   }
@@ -588,50 +687,50 @@ public class OpenSearchDatabaseTestService extends DatabaseTestService {
     }
   }
 
-  private static ClientAndServer initMockServer() {
-    return DatabaseTestService.initMockServer(
-      IntegrationTestConfigurationUtil
-        .createItConfigurationService()
-        .getOpenSearchConfiguration()
-        .getFirstConnectionNode());
-  }
-
-  private void createClientAndAddToCache(String clientKey, ConfigurationService configurationService) {
+  private void createClientAndAddToCache(
+      final String clientKey, final ConfigurationService configurationService) {
     final DatabaseConnectionNodeConfiguration osConfig =
-      configurationService.getOpenSearchConfiguration().getFirstConnectionNode();
-    log.info("Creating OS Client with host {} and port {}", osConfig.getHost(), osConfig.getHttpPort());
-    prefixAwareOptimizeOpenSearchClient = new OptimizeOpenSearchClient(
-      OpenSearchClientBuilder.buildOpenSearchClientFromConfig(configurationService),
-      OpenSearchClientBuilder.buildOpenSearchAsyncClientFromConfig(configurationService),
-      new OptimizeIndexNameService(configurationService, DatabaseType.OPENSEARCH)
-    );
+        configurationService.getOpenSearchConfiguration().getFirstConnectionNode();
+    log.info(
+        "Creating OS Client with host {} and port {}", osConfig.getHost(), osConfig.getHttpPort());
+    prefixAwareOptimizeOpenSearchClient =
+        new OptimizeOpenSearchClient(
+            OpenSearchClientBuilder.buildOpenSearchClientFromConfig(configurationService),
+            OpenSearchClientBuilder.buildOpenSearchAsyncClientFromConfig(configurationService),
+            new OptimizeIndexNameService(configurationService, DatabaseType.OPENSEARCH));
     adjustClusterSettings();
     CLIENT_CACHE.put(clientKey, prefixAwareOptimizeOpenSearchClient);
   }
 
   private ConfigurationService createConfigurationService() {
-    final ConfigurationService configurationService = IntegrationTestConfigurationUtil.createItConfigurationService();
+    final ConfigurationService configurationService =
+        IntegrationTestConfigurationUtil.createItConfigurationService();
     if (customIndexPrefix != null) {
-      configurationService.getOpenSearchConfiguration()
-        .setIndexPrefix(configurationService.getOpenSearchConfiguration().getIndexPrefix() + customIndexPrefix);
+      configurationService
+          .getOpenSearchConfiguration()
+          .setIndexPrefix(
+              configurationService.getOpenSearchConfiguration().getIndexPrefix()
+                  + customIndexPrefix);
     }
     return configurationService;
   }
 
   private void adjustClusterSettings() {
-    PutClusterSettingsRequest.Builder settings = new PutClusterSettingsRequest.Builder()
-      .persistent("action.auto_create_index", JsonData.of(true))
-      .persistent("cluster.max_shards_per_node", JsonData.of(10000))
-      .flatSettings(true);
+    final PutClusterSettingsRequest.Builder settings =
+        new PutClusterSettingsRequest.Builder()
+            .persistent("action.auto_create_index", JsonData.of(true))
+            .persistent("cluster.max_shards_per_node", JsonData.of(10000))
+            .flatSettings(true);
     try {
       getOptimizeOpenSearchClient().getOpenSearchClient().cluster().putSettings(settings.build());
-    } catch (IOException e) {
+    } catch (final IOException e) {
       throw new OptimizeRuntimeException("Could not update cluster settings!", e);
     }
   }
 
-  private <T> List<T> getAllDocumentsOfIndexAs(final String indexName, final Class<T> type, final Query query) {
-    return getAllDocumentsOfIndicesAs(new String[]{indexName}, type, query);
+  private <T> List<T> getAllDocumentsOfIndexAs(
+      final String indexName, final Class<T> type, final Query query) {
+    return getAllDocumentsOfIndicesAs(new String[] {indexName}, type, query);
   }
 
   private OptimizeIndexNameService getIndexNameService() {
@@ -639,73 +738,67 @@ public class OpenSearchDatabaseTestService extends DatabaseTestService {
   }
 
   @SneakyThrows
-  private <T> List<T> getAllDocumentsOfIndicesAs(final String[] indexNames, final Class<T> type,
-                                                 final Query query) {
-    final SearchRequest.Builder searchReqBuilder = RequestDSL.searchRequestBuilder()
-      .index(List.of(indexNames))
-      .query(query)
-      .trackTotalHits(new TrackHits.Builder().enabled(true).build())
-      .size(100);
+  private <T> List<T> getAllDocumentsOfIndicesAs(
+      final String[] indexNames, final Class<T> type, final Query query) {
+    final SearchRequest.Builder searchReqBuilder =
+        RequestDSL.searchRequestBuilder()
+            .index(List.of(indexNames))
+            .query(query)
+            .trackTotalHits(new TrackHits.Builder().enabled(true).build())
+            .size(100);
 
-    String errorMessage = "Was not able to retrieve all documents for indices";
-    SearchResponse<T> searchResponse = getOptimizeOpenSearchClient().search(searchReqBuilder, type, errorMessage);
-    return searchResponse.hits().hits().stream().map(Hit::source).toList();
+    final String errorMessage = "Was not able to retrieve all documents for indices";
+    final SearchResponse<T> searchResponse =
+        getOptimizeOpenSearchClient().search(searchReqBuilder, type, errorMessage);
+    return searchResponse.hits().hits().stream().map(Hit::source).collect(Collectors.toList());
   }
 
   private int getInstanceCountWithQuery(final Query query) {
     try {
-      return Long.valueOf(getOptimizeOpenSearchClient()
-                            .count(new String[]{PROCESS_INSTANCE_MULTI_ALIAS}, query)).intValue();
-    } catch (IOException e) {
+      return Long.valueOf(
+              getOptimizeOpenSearchClient()
+                  .count(new String[] {PROCESS_INSTANCE_MULTI_ALIAS}, query))
+          .intValue();
+    } catch (final IOException e) {
       throw new OptimizeIntegrationTestException(
-        "Cannot evaluate document count for index " + PROCESS_INSTANCE_MULTI_ALIAS,
-        e
-      );
+          "Cannot evaluate document count for index " + PROCESS_INSTANCE_MULTI_ALIAS, e);
     }
   }
 
   private Integer getVariableInstanceCountForAllProcessInstances(final Query processInstanceQuery) {
     // TODO implement with #11121
-    throw new NotImplementedException("Not yet implemented for OpenSearch, will be implemented with issue #11121");
+    throw new NotImplementedException(
+        "Not yet implemented for OpenSearch, will be implemented with issue #11121");
   }
 
   private void deleteIndexOfMapping(final IndexMappingCreator<IndexSettings.Builder> indexMapping) {
-    deleteIndices(new String[]{indexMapping.getIndexName()});
-  }
-
-  @NotNull
-  private static IndexRequest.Builder createIndexRequestBuilder(final String indexName, final String id, final Object entry) {
-    IndexRequest.Builder request =
-      new IndexRequest.Builder()
-        .document(entry)
-        .index(indexName)
-        .id(id)
-        .refresh(Refresh.True);
-    return request;
+    deleteIndices(new String[] {indexMapping.getIndexName()});
   }
 
   private void deleteIndices(final String[] indicesToDelete) {
     getOptimizeOpenSearchClient()
-      .getRichOpenSearchClient().index()
-      .deleteIndicesWithRetries(indicesToDelete);
+        .getRichOpenSearchClient()
+        .index()
+        .deleteIndicesWithRetries(indicesToDelete);
   }
 
-  private void updateZeebeRecordsByQuery(final String zeebeRecordPrefix,
-                                         final String indexName,
-                                         final Query query,
-                                         final String updateScript) {
+  private void updateZeebeRecordsByQuery(
+      final String zeebeRecordPrefix,
+      final String indexName,
+      final Query query,
+      final String updateScript) {
     updateRecordsByQuery(zeebeRecordPrefix + "_" + indexName + "*", query, updateScript);
   }
 
-  private void updateRecordsByQuery(final String indexName,
-                                    final Query query,
-                                    final String updateScript) {
-    getOptimizeOpenSearchClient().getRichOpenSearchClient().doc()
-      .updateByQuery(
-        indexName,
-        query,
-        OpenSearchWriterUtil.createDefaultScriptWithPrimitiveParams(updateScript, Collections.emptyMap())
-      );
+  private void updateRecordsByQuery(
+      final String indexName, final Query query, final String updateScript) {
+    getOptimizeOpenSearchClient()
+        .getRichOpenSearchClient()
+        .doc()
+        .updateByQuery(
+            indexName,
+            query,
+            OpenSearchWriterUtil.createDefaultScriptWithPrimitiveParams(
+                updateScript, Collections.emptyMap()));
   }
-
 }
